# Agentra

./: CONTEXT_HANDOFF_2026-03-23.md  LICENSE  README.md  memory.md  pyproject.toml
Agentra-main/Agentra-main/: README.md  TEACHER_BRIEF.md  memory.md  pyproject.toml
Agentra-main/Agentra-main/agentra/: __init__.py  browser_runtime.py  cli.py  live_app.py  logging_utils.py  task_routing.py  (+1 more)
Agentra-main_3/Agentra-main/: @AutomationLog.txt  CONTEXT_HANDOFF_2026-03-23.md  LICENSE  README.md  memory.md  pyproject.toml
agentra/: __init__.py  approval_policy.py  browser_runtime.py  cli.py  config.py  live_app.py  logging_utils.py  run_report.py  run_store.py  runtime.py  task_routing.py
agentra/agents/: __init__.py  autonomous.py  orchestrator.py
agentra/desktop_automation/: __init__.py  models.py  session_manager.py
agentra/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py  registry.py
agentra/memory/: __init__.py  embedding_memory.py  providers.py  workspace.py
agentra/tools/: __init__.py  base.py  browser.py  computer.py  filesystem.py  git_tool.py  local_system.py  terminal.py  visual_diff.py  windows_desktop.py
docs/: README.md  architecture.md  artifacts.md  audit.md  features.md  interfaces.md  policies.md
tests/: test_agent.py  test_approval_policy.py  test_browser_b.py  test_browser_runtime.py  test_browser_tool.py  test_desktop_sessions.py  test_drift_detection.py  test_gemini_provider.py  test_live_app.py  test_live_app_browser.py  test_llm_sessions.py  test_logging_utils.py  test_memory.py  test_ocr.py  test_orchestrator.py  test_recording.py  test_run_report.py  test_runtime.py  test_screenshot_format.py  test_screenshot_region.py  test_tools.py
tmp-runtime-debug/.threads/: registry.json
(+83 files in other folders)
